# Legal-Agent

./: README.md  a.html  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/learning Langraph/: caseRag.ipynb  caseRag_final.ipynb  chatbot_memory.py  checkpoint.sqlite  learnRag.ipynb
backend/learning Langraph/pdf/: chroma.sqlite3
backend/old_backedn/: fastserver.py
backend/old_backedn/trash/: index.html
backend/smallRetriever/: README.md
backend/smallRetriever/vectorstore/: bm25_retriever.pkl
backend/src/legal_agent/: __init__.py
learning Langraph/: Langchatbot.ipynb  React.ipynb  chatbot.ipynb  chatbot_memory.py  chatbot_with_tools.py  drafter.ipynb  learnRag.ipynb  loopingAgent.ipynb  mawi_drafter.ipynb  rag_AGENT.py
old_backedn/: 1agent.ipynb  STREAMING_INTEGRATION.md  llms-full.txt  main.py
old_backedn/trash/: embedding.py
smallRetriever/: Rag_chatbot.py  fastserverRAG.py
smallRetriever/vectorstore/: chroma.sqlite3
